--- a/app/views/events/home.html.erb
+++ b/app/views/events/home.html.erb
@@ -2,8 +2,6 @@
 
 <h2><%= link_to "Here are a bunch of shows", '/events' %></h2>
 
-<h3><%= link_to "Shows this week", 'events/week/1' %></h3>
-
 <%= form_tag ("/events/random") do %>
 <%= submit_tag("Give me a random show") %>
 <% end %>
@@ -12,6 +10,16 @@
 
 <%= render partial: "event_details" %>
 
-<div> MORE BUTTONS HERE</div>
+<div> 
+  <%= form_tag ("/events/random") do %>
+  <%= submit_tag("Under 20 bucks") %>
+  <% end %>
+</div>
+
+<div> 
+  <%= form_tag ("/events/random") do %>
+  <%= submit_tag("TONIGHT!!!") %>
+  <% end %>
+</div>
 
 <% end%>
