--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -13,3 +13,34 @@
     </li>
   <% end %>
 </ul>
+
+
+  <script>
+     var ready = function initialize() {
+        var myLatlng = new google.maps.LatLng(<%= @venue.latitude %>,<%= @venue.longitude%>);
+        var my_venue = "<%= @venue.name %>"
+        var mapOptions = {
+          center: myLatlng,
+          zoom: 15
+        };
+        var map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+      
+
+        var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: my_venue
+        });
+
+      }
+
+      // google.maps.event.addDomListener(window, 'load', initialize);
+
+    $(document).ready(ready)
+    $(document).on('page:load', ready)
+  </script>
+
+
+
+
