fix genre seed bug, tweak dates, fix random back bug

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -8,8 +8,8 @@
 <ul>
   <% @venue.events.each do |event| %>
     <li>
-      <%=event.title %>, 
-      <%=event.datetime_local%>
+      <%=link_to event.title, event %>, 
+      <%=event.pretty_date%>
     </li>
   <% end %>
 </ul>
