--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,10 +1,15 @@
-<h1><%= @artist.name %></h1>
-<h2>Upcoming Events</h2>
-<ul>
-  <% @artist.events.each do |event| %>
-    <li>
-      <%=event.venue.name %>, 
-      <%=event.datetime_local%>
-    </li>
-  <% end %>
-</ul>
+<div class="text-center">
+  <h1><%= @artist.name %></h1>
+</div>
+
+<div id="main-container" class="container-fluid">
+  <h2>Upcoming Events</h2>
+  <ul>
+    <% @artist.events.each do |event| %>
+      <li>
+        <%=event.venue.name %>, 
+        <%=event.datetime_local%>
+      </li>
+    <% end %>
+  </ul>
+</div>
