--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,8 +1,11 @@
-<h1>Venues</h1>
-<ul>
-  <% @venues.each do |venue| %>
-    <li>
-      <%=link_to venue.name, venue %>
-    </li>
-      <%end%>
-</ul>
+
+<div id="main-container" class="container-fluid">
+  <h1>Venues</h1>
+  <ul>
+    <% @venues.each do |venue| %>
+      <li>
+        <%=link_to venue.name, venue %>
+      </li>
+        <%end%>
+  </ul>
+</div>
