--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
 
 </head>
 <body>
+<nav>
+  <%= link_to "Home", root_path%>
+  <%= link_to "Events", events_path%>
+  <%= link_to "Artists", artists_path%>
+  <%= link_to "Venues", venues_path%>
+</nav>
 
 <%= yield %>
 
