--- a/app/views/events/_event_details.html.erb
+++ b/app/views/events/_event_details.html.erb
@@ -12,13 +12,7 @@
 
 
   <h2>Artists:</h2>
-  <ul>
-  <% @event.artists.each do |artist| %>
-      <li><%=link_to artist.name, artist %> <%= artist.pretty_genres%></li>
-  <% end %>
-
-  </ul>
-
+  <%= render @event.artists %>
 
 
   <h2>Venue:</h2> 
@@ -26,3 +20,30 @@
   <%= @event.venue.address%>
   <%= @event.venue.extended_address%>
 </div>
+
+  <script>
+     function initialize() {
+        var myLatlng = new google.maps.LatLng(<%= @event.venue.latitude %>,<%= @event.venue.longitude%>);
+        var my_venue = "<%= @event.venue.name %>"
+        var mapOptions = {
+          center: myLatlng,
+          zoom: 15
+        };
+        var map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+
+        var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: my_venue
+        });
+
+      }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'page:load', initialize);
+
+  </script>
+
+
+<div id="map-canvas"></div>
