--- a/app/views/events/home.html.erb
+++ b/app/views/events/home.html.erb
@@ -94,7 +94,7 @@
 
 <% if @event %>
 <div class="well well-lg">
-<%= render partial: "event_details" %>
+<%= render partial: "event_front" %>
 
 
 <% end%>
