--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4280,7 +4280,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin: 0;
   }
   .navbar-nav > li {
-    float: left;
+    padding-left:80px;
+    padding-right:30px;
+    margin-left:70px;
+    margin-right:80px;
+    float: right;
   }
   .navbar-nav > li > a {
     padding-top: 20px;
@@ -4416,8 +4420,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #3e3f3a;
-  border-color: #3e3f3a;
+  background-color: #93c54b;
+  border-color: #93c54b;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
@@ -4428,10 +4432,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #8e8c84;
+  color: #EEB909;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #98978b;
+  color: #DEDEDE; 
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
@@ -4447,7 +4451,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
 .navbar-default .navbar-nav > .disabled > a:focus {
-  color: #cccccc;
+  color: #CFCCC2;
   background-color: transparent;
 }
 .navbar-default .navbar-toggle {
@@ -4458,7 +4462,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #393a35;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #98978b;
+  background-color: #93c54b;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
@@ -4493,13 +4497,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default .navbar-link {
-  color: #98978b;
+  color: #CFCCC2;
 }
 .navbar-default .navbar-link:hover {
   color: #ffffff;
 }
 .navbar-default .btn-link {
-  color: #98978b;
+  color: #CFCCC2;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
