--- a/app/views/events/_event_details.html.erb
+++ b/app/views/events/_event_details.html.erb
@@ -10,16 +10,21 @@
   <div class="price"><%= number_to_currency(@event.average_price)%></div>
   <% end %>
 
-
+<div class="row">
+    <div class="col-md-6">
   <h2>Artists:</h2>
   <%= render @event.artists %>
+  </div>
 
-
+  <div class="col-md-6">
   <h2>Venue:</h2> 
   <strong><%= link_to @event.venue.name, @event.venue %></strong>
   <%= @event.venue.address%>
   <%= @event.venue.extended_address%>
-</div>
+
+    <div id="map-canvas", style="width:750px;height:540px;"></div>
+    </div>
+    </div>
 
   <script>
      function initialize() {
@@ -44,6 +49,14 @@
     google.maps.event.addDomListener(window, 'page:load', initialize);
 
   </script>
+  </div>s 
+</body>
+</html>
 
 
-<div id="map-canvas"></div>
+
+
+
+
+
+
