--- a/app/views/events/home.html.erb
+++ b/app/views/events/home.html.erb
@@ -26,6 +26,41 @@
   </div> -->
 <body>
 
+<!-- <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+        <span class="sr-only">Toggle</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">ConcertCurator</a>
+    </div>
+
+    <div class="nav navbar-nav navbar-center" id="">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Events <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Artists <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Venues <span class="sr-only">(current)</span></a></li>
+        
+
+        <! <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">List By Week <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li> -->
+      
+
+
  <div id="main-container" class="container-fluid">
 
   <div class="jumbotron">
@@ -35,33 +70,30 @@
     </div>
     </div>
 
-  <div class="col-xs-3">
+<!--button toolbar -->
+<div class="btn-toolbar">
+
+  <div class="form-group col-md-3 ">
+      <%= form_tag ("/events/list") do %>
+        <%= select_tag(:genre, options_for_select(Genre.select_options), class: "btn btn-success form-control dropdown-toggle", :prompt => "Select Genre") %>
+        <%= submit_tag "List By Genre", :class => 'btn btn-success'  %>
+      <% end %>
+
+  </div>
+
+  <div class="form-group col-md-3">
     <%= form_tag ("/events/list") do %>
-      <%= select_tag(:genre, options_for_select(Genre.select_options)) %>
-      <%= submit_tag "List By Genre", :class => 'btn btn-success'  %>
+      <%= select_tag(:week, options_for_select(Event.week_select_options), class: "btn btn-success form-control dropdown-toggle", :prompt => "Select Week") %>
+      <%= submit_tag "List By Week", :class => 'btn btn-success'%>
     <% end %>
   </div>
-  <div class="col-xs-3">
-    <%= form_tag ("/events/list") do %>
-      <%= select_tag(:week, options_for_select(Event.week_select_options)) %>
-      <%= submit_tag "List By Week", :class => 'btn btn-success'  %>
-    <% end %>
-  </div>
-  <div class="col-xs-3">
-      <%= link_to "List Artists", artists_path, :class => 'btn btn-success'  %>
-  </div>
-
-  <div class="col-xs-3">
-      <%= link_to "List Venues", venues_path, :class => 'btn btn-success'  %>
-  </div>
 
 
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-xs-12">
-        <h2><%= link_to "A WHOLE BUNCH OF UPCOMING EVENTS", '/events', class: 'btn btn-default btn-lg btn-block' %></h2>
-      </div>
-    </div>
+
+  <div class="form-group col-md-3">
+    <h2><%= link_to "List all concerts", '/events', class: 'btn btn-success btn-lg btn-block' %></h2>
+
+  </div>
 
 
 
@@ -69,12 +101,12 @@
 
 
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-md-4">
           <%= link_to "Give me a random show", '/events/random', class: 'btn btn-success btn-lg' %>
       </div>
 
 
-      <div class="col-xs-4">
+      <div class="col-md-4">
       <%= form_tag ("/events/random") do %>
         <%= submit_tag "Under 20 bucks", :class => 'btn btn-success btn-lg'%>
         <% end %>
@@ -82,7 +114,7 @@
 
 
 
-      <div class="col-xs-4">
+      <div class="col-md-4">
         <%= form_tag ("/events/random") do %>
         <%= submit_tag "TONIGHT!!!", :class => 'btn btn-success btn-lg' %>
         <% end %>
