--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
   <title>ConcertCurator</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
+
+
+<body>
 
 <div class="text-center">
   <h1><%= @venue.name %></h1>
@@ -17,19 +19,27 @@
   </h4>
 </div>
 
+<p></p>
+
 <div id="main-container" class="container-fluid">
-<h2>Upcoming Events</h2>
+  <div class="row">
+    <div class="col-md-5">
+    
+    <h2>Upcoming Events</h2>
 
-<ul>
-  <% @venue.events.each do |event| %>
-    <li>
-      <%=link_to event.title, event %>,
-      <%=event.pretty_date%>
-    </li>
-  <% end %>
-</ul>
-
-
+    <ul>
+      <% @venue.events.each do |event| %>
+        <li>
+          <%=link_to event.title, event %>,
+          <%=event.pretty_date%>
+        </li>
+      <% end %>
+    </ul>
+    </div>
+  
+    <div class="col-md-5">
+    <div id="map-canvas", style="width:500px;height:380px;"></div>
+    </div>
 
 
   <script>
@@ -38,7 +48,10 @@
         var my_venue = "<%= @venue.name %>"
         var mapOptions = {
           center: myLatlng,
-          zoom: 15
+          zoom: 15,
+          zoomControl: true,
+          zoomControlOptions: {
+            style: google.maps.ZoomControlStyle.DEFAULT}
         };
         var map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
@@ -55,10 +68,8 @@
     google.maps.event.addDomListener(window, 'page:load', initialize);
 
   </script>
-</div>
-
-<div id="map-canvas"></div>
-
+  </div>
+</body>
 </html>
 
 
