more style tweaks, front page, youtube

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -12,5 +12,8 @@
 <p>
 </p>
 
-
-<%= @artist.embed(@artist.find_id) %>
+<div class="col-md-6">
+  <div class="embed-responsive embed-responsive-4by3">
+    <%= @artist.embed(@artist.find_id) %>
+  </div>
+</div>
