--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li><a href="" target="_blank">Open in new tab</a></li> 
-       <!-- <li><a href="/" target="_blank">Open in new tab</a></li> -->
+<!--        <li><a href="" target="_blank">Open in new tab</a></li> 
+ -->       <!-- <li><a href="/" target="_blank">Open in new tab</a></li> -->
       </ul>
     </div>
   </div>
