--- a/app/views/artists/_artist.html.erb
+++ b/app/views/artists/_artist.html.erb
@@ -1,4 +1,8 @@
 <div>
-  <li><%=link_to artist.name, artist %> <%= artist.pretty_genres%></li>
-  <%= artist.embed(artist.find_id) %>
+  <div class="col-md-6">
+    <%=link_to artist.name, artist %> <%= artist.pretty_genres%>
+    <div class="embed-responsive embed-responsive-4by3">
+      <%= artist.embed(artist.find_id) %>
+    </div>
+  </div>
 </div>
