--- a/app/views/events/_event_front.html.erb
+++ b/app/views/events/_event_front.html.erb
@@ -1,5 +1,6 @@
 <div class="text-center">
 <h1><%= @event.title %></h1>
+<h4><%= link_to "More Info", @event %></h4>
 
 <h4><%=@event.pretty_date%></h4>
 </div>
