--- a/app/views/events/home.html.erb
+++ b/app/views/events/home.html.erb
@@ -63,91 +63,98 @@
 
  <div id="main-container" class="container-fluid">
 
-  <div class="jumbotron">
-    <div class="container text-center">
-      <h1>ConcertCurator</h1>
-      <p>Your one-stop spot for the best rock shows in NY</p> 
-    </div>
+    <div class="jumbotron">
+      <div class="container text-center">
+        <h1>ConcertCurator</h1>
+        <p>Your one-stop spot for the best rock shows in NY</p> 
+      </div>
     </div>
 
 <!--button toolbar -->
-<div class="btn-toolbar">
-
-  <div class="form-group col-md-3 ">
-      <%= form_tag ("/events/list") do %>
-        <%= select_tag(:genre, options_for_select(Genre.select_options), class: "btn btn-success form-control dropdown-toggle", :prompt => "Select Genre") %>
-        <%= submit_tag "List By Genre", :class => 'btn btn-success'  %>
-      <% end %>
-
-  </div>
-
-  <div class="form-group col-md-3">
-    <%= form_tag ("/events/list") do %>
-      <%= select_tag(:week, options_for_select(Event.week_select_options), class: "btn btn-success form-control dropdown-toggle", :prompt => "Select Week") %>
-      <%= submit_tag "List By Week", :class => 'btn btn-success'%>
-    <% end %>
-  </div>
-
-
-
-  <div class="form-group col-md-3">
-    <h2><%= link_to "List all concerts", '/events', class: 'btn btn-success btn-lg btn-block' %></h2>
-
-  </div>
-
-
-
-    <p></p>
-
-
-    <div class="row">
-      <div class="col-md-4">
-          <%= link_to "Give me a random show", '/events/random', class: 'btn btn-success btn-lg' %>
+    <div class="btn-toolbar">
+     
+      <div class="container text-center">
+          <h2>Lotsa Concerts</h2>
       </div>
 
 
-      <div class="col-md-4">
-      <%= form_tag ("/events/random") do %>
-        <%= submit_tag "Under 20 bucks", :class => 'btn btn-success btn-lg'%>
+      <div class="form-group col-md-4 ">
+          <%= form_tag ("/events/list") do %>
+            <div class="col-md-6">
+              <%= select_tag(:genre, options_for_select(Genre.select_options), class: "btn btn-info form-control dropdown-toggle", :prompt => "Select Genre") %>
+            </div>
+            <%= submit_tag "List By Genre", :class => 'btn btn-success col-md-6'  %>
+            
+          <% end %>
+
+      </div>
+
+      <div class="form-group col-md-4">
+        <%= form_tag ("/events/list") do %>
+          <div class="col-md-6">
+            <%= select_tag(:week, options_for_select(Event.week_select_options), class: "btn btn-info form-control dropdown-toggle", :prompt => "Select Week") %>
+          </div>
+          <%= submit_tag "List By Week", :class => 'btn btn-success col-md-6'%>
         <% end %>
       </div>
 
+
+
+      <div class="form-group col-md-4">
+        <%= link_to "List all concerts", '/events', class: 'btn btn-success btn-block' %>
+      </div>
+
+    </div>
+
+
+
+
+    <div class="container text-center">
+        <h2>Just give me a concert</h2>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4">
+          <%= link_to "Give me a random show", '/events/random', class: 'btn btn-success btn-lg col-md-12' %>
+      </div>
 
 
       <div class="col-md-4">
         <%= form_tag ("/events/random") do %>
-        <%= submit_tag "TONIGHT!!!", :class => 'btn btn-success btn-lg' %>
+          <%= submit_tag "Under 20 bucks", :class => 'btn btn-success btn-lg col-md-12'%>
         <% end %>
       </div>
+
+
+
+      <div class="col-md-4">
+          <%= form_tag ("/events/random") do %>
+          <%= submit_tag "TONIGHT!!!", :class => 'btn btn-success btn-lg col-md-12' %>
+          <% end %>
+      </div>
+    </div>
   </div>
-  </div>
+  
+  <% if @event %>
+  
+    <div class="well well-lg">
+      <%= render partial: "event_front" %>
 
-<p>
+      <div class="container text-center">
+        <% if @has_genres %>
+          <div> 
+            <%= form_tag ("/events/random") do %>
+              <% @genre_ids.each do |id| %>
+                <%= hidden_field_tag "genre_ids[]", id %>
+              <% end %> 
 
-<% if @event %>
-<div class="well well-lg">
-<%= render partial: "event_front" %>
+              <%= submit_tag "Similar show", :class => 'btn btn-success'  %>
+            <% end %>
+          </div>
+        <% end %>
+    </div>
+  <% end%>
 
-
-<% end%>
-
-
-
-
-<div class="container text-center">
-<% if @has_genres %>
-  <div> 
-    <%= form_tag ("/events/random") do %>
-    <% @genre_ids.each do |id| %>
-      <%= hidden_field_tag "genre_ids[]", id %>
-    <% end %> 
-
-    <%= submit_tag "Similar show", :class => 'btn btn-success'  %>
-    <% end %>
-  </div>
-<% end %>
-</div>
-</div>
-</div>
 </body>
 </html>
