tweaks for pushing to heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH_ULMQ-Ext0_W8cBvL9yo02sVZ7VpyBA&sensor=false"></script>
 
-  <title>TestProject</title>
+  <title>ConcertCurator</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
